--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
-    {
-      "name": "nodejs",
-      "version": "1.0.0",
-      "description": "Node.js backend with Express and Supabase",
-      "type": "module",
-      "main": "index.js",
-      "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "setup-db": "node setup-db.js",
-        "test": "echo \"No tests yet. Add some!\" && exit 0"
-      },
-      "keywords": ["node", "express", "supabase", "api", "backend"],
-      "author": "Sparshak",
-      "license": "ISC",
-      "dependencies": {
-        "@supabase/supabase-js": "^2.49.4",
-        "bcrypt": "^5.1.1",
-        "dotenv": "^16.4.7",
-        "express": "^5.1.0",
-        "express-async-handler": "^1.2.0",
-        "jsonwebtoken": "^9.0.2",
-        "pg": "^8.11.1",
-        "postgres": "^3.3.7"
-      },
-      "devDependencies": {
-        "@types/express": "^4.17.17",
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "^22.13.11",
-        "nodemon": "^3.0.3"
-      }
-    }
+{
+  "name": "nodejs",
+  "version": "1.0.0",
+  "description": "Node.js backend with Express and CSV storage",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "setup-db": "node setup-db.js",
+    "test": "echo \"No tests yet. Add some!\" && exit 0"
+  },
+  "keywords": [
+    "node",
+    "express",
+    "csv",
+    "api",
+    "backend",
+    "recommendation-system",
+    "ecommerce"
+  ],
+  "author": "Sparshak",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "json2csv": "^5.0.7",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^22.13.11",
+    "nodemon": "^3.0.3"
+  }
+}
+
